# GePat

./: Makefile  README.md  pyproject.toml
patrimonymanager/: credentials.db  main.py
patrimonymanager/database/: database.py
patrimonymanager/pages/: login_menu.py  main_menu.py
